--- a/Makefile.in
+++ b/Makefile.in
@@ -227,7 +227,7 @@ SUBDIRS = fwdpp
 #  following and add `chk' to the EXTRA_DIST list
 #TESTS=chk
 fwdpp_SOURCES = 
-EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/Makefile
+EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/Makefile LICENSE
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
