added recombination_methods_ind.hpp to pkginclude_HEADERS

--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -17,4 +17,5 @@ pkginclude_HEADERS=debug.hpp \
 	mutation.tcc \
 	sampling_functions.hpp \
 	sampling_functions.tcc \
-	util.hpp
+	util.hpp \
+	recombination_methods_ind.hpp
