--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -197,7 +197,8 @@ pkginclude_HEADERS = debug.hpp \
 	mutation.tcc \
 	sampling_functions.hpp \
 	sampling_functions.tcc \
-	util.hpp
+	util.hpp \
+	recombination_methods_ind.hpp
 
 all: all-am
 
