--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -3,6 +3,9 @@ pkgincludedir=$(prefix)/include/fwdpp
 pkginclude_HEADERS=debug.hpp \
 	diploid_functions.hpp \
 	diploid_functions.tcc \
+	diploid_functions_gamete_based.tcc \
+	diploid_functions_ind_based.tcc \
+	diploid_functions_recombine_gametes.tcc \
 	diploid.hh \
 	fitness_policies.hpp \
 	fitness_models.hpp \
