Modified by aclocal and automake

--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -183,6 +183,9 @@ top_srcdir = @top_srcdir@
 pkginclude_HEADERS = debug.hpp \
 	diploid_functions.hpp \
 	diploid_functions.tcc \
+	diploid_functions_gamete_based.tcc \
+	diploid_functions_ind_based.tcc \
+	diploid_functions_recombine_gametes.tcc \
 	diploid.hh \
 	fitness_policies.hpp \
 	fitness_models.hpp \
