--- a/examples/Makefile
+++ b/examples/Makefile
@@ -5,10 +5,10 @@ DEBUG=-DNDEBUG
 OPT=-O2  -funroll-all-loops -fno-default-inline
 #OPT=-O2 -pg
 #OPT=
-CXXFLAGS=$(OPT) -Wall -W -I..  $(DEBUG)
+CXXFLAGS=$(OPT) -Wall -W -I..  $(DEBUG) -pg
 
-TARGETS=diploid diploid_ind diploid_fixed_sh diploid_twopop_mig diploid_binaryIO RHH bneck_selection migsel_ind diploid_binaryIO_ind diploid_fixed_sh_ind 
-all: diploid.o diploid_ind.o diploid_binaryIO.o diploid_binaryIO_ind.o diploid_fixed_sh.o diploid_twopop_mig.o RHH.o diploid_fixed_sh_ind.o bneck_selection.o migsel_ind.o
+TARGETS=diploid diploid_ind diploid_fixed_sh diploid_twopop_mig diploid_binaryIO RHH bneck_selection migsel_ind diploid_binaryIO_ind diploid_fixed_sh_ind gsl_rng_test gsl_rng_test 
+all: diploid.o diploid_ind.o diploid_binaryIO.o diploid_binaryIO_ind.o diploid_fixed_sh.o diploid_twopop_mig.o RHH.o diploid_fixed_sh_ind.o bneck_selection.o migsel_ind.o gsl_rng_test.o gsl_rng_test2.o 
 	$(CXX) $(CXXFLAGS) -o diploid diploid.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o diploid_ind diploid_ind.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o RHH RHH.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
@@ -19,6 +19,8 @@ all: diploid.o diploid_ind.o diploid_binaryIO.o diploid_binaryIO_ind.o diploid_f
 	$(CXX) $(CXXFLAGS) -o diploid_twopop_mig diploid_twopop_mig.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o bneck_selection bneck_selection.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o migsel_ind migsel_ind.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
+	$(CXX) $(CXXFLAGS) -o gsl_rng_test gsl_rng_test.o -lgsl -lgslcblas $(LDFLAGS)
+	$(CXX) $(CXXFLAGS) -o gsl_rng_test2 gsl_rng_test2.o -lgsl -lgslcblas $(LDFLAGS)
 
 clean:
 	rm -f *.o $(TARGETS)
