removed flag that clang doesn't like

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,7 +2,7 @@ CXX=c++
 DEBUG=-DNDEBUG
 #DEBUG=-g
 #DEBUG=
-OPT=-O2  -funroll-all-loops -fno-default-inline
+OPT=-O2  -funroll-all-loops
 #OPT=-O2 -pg
 #OPT=
 CXXFLAGS=$(OPT) -Wall -W -I..  $(DEBUG)
