--- a/examples/Makefile
+++ b/examples/Makefile
@@ -8,7 +8,7 @@ OPT=-O2  -funroll-all-loops
 CXXFLAGS=$(OPT) -Wall -W -I..  $(DEBUG)
 
 TARGETS=diploid diploid_ind diploid_fixed_sh diploid_twopop_mig diploid_binaryIO RHH bneck_selection migsel_ind diploid_binaryIO_ind diploid_fixed_sh_ind gsl_rng_test gsl_rng_test2 TFL2013 phiab
-all: diploid.o diploid_ind.o diploid_binaryIO.o diploid_binaryIO_ind.o diploid_fixed_sh.o diploid_twopop_mig.o RHH.o diploid_fixed_sh_ind.o bneck_selection.o migsel_ind.o gsl_rng_test.o gsl_rng_test2.o TFL2013.o diploid_ind_2locus.o phiab.o strobeck_morgan.o
+all: diploid.o diploid_ind.o diploid_binaryIO.o diploid_binaryIO_ind.o diploid_fixed_sh.o diploid_twopop_mig.o RHH.o diploid_fixed_sh_ind.o bneck_selection.o migsel_ind.o gsl_rng_test.o gsl_rng_test2.o TFL2013.o diploid_ind_2locus.o phiab.o strobeck_morgan.o pmono.o
 	$(CXX) $(CXXFLAGS) -o diploid diploid.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o diploid_ind diploid_ind.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o diploid_ind_2locus diploid_ind_2locus.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
@@ -25,6 +25,7 @@ all: diploid.o diploid_ind.o diploid_binaryIO.o diploid_binaryIO_ind.o diploid_f
 	$(CXX) $(CXXFLAGS) -o gsl_rng_test gsl_rng_test.o -lgsl -lgslcblas $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o gsl_rng_test2 gsl_rng_test2.o -lgsl -lgslcblas $(LDFLAGS)
 	$(CC) $(CCFLAGS) -o phiab phiab.o -lm
+	$(CXX) $(CXXFLAGS) -o pmono pmono.o -lsequence
 
 clean:
 	rm -f *.o $(TARGETS)
