--- a/configure.in
+++ b/configure.in
@@ -41,6 +41,8 @@ AC_HEADER_STDC
 AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )
 
 AC_CHECK_HEADER(boost/bind.hpp,HAVE_BOOST=1 , [AC_MSG_ERROR([boost/bind.hpp not found.  boost libraries required.  Install boost (www.boost.org) ])])
+AC_CHECK_HEADER(boost/container/vector.hpp, , [AC_MSG_ERROR([boost/container/vector.hpp not found.  Please install boost or upgrade your installation to a newer version])])
+AC_CHECK_HEADER(boost/container/list.hpp, , [AC_MSG_ERROR([boost/container/list.hpp not found.  Please install boost or upgrade your installation to a newer version])])
 AC_CHECK_HEADER(Sequence/SimDataIO.hpp,HAVE_LIBSEQ=1 , [AC_MSG_ERROR([Sequence/SimDataIO.hpp not found. libsequence (www.molpopgen.org) >= 1.7.8 required.])])
 AC_CHECK_HEADER(gsl/gsl_rng.h,HAVE_GSL=1,[AC_MSG_ERROR([gsl/gsl_rng.h not found.  Please install the GNU Scientific Library])])
 AC_CHECK_HEADER(gsl/gsl_randist.h,HAVE_GSL=1,[AC_MSG_ERROR([gsl/gsl_rng.h not found.  Please install the GNU Scientific Library])])
