--- a/examples/Makefile
+++ b/examples/Makefile
@@ -8,12 +8,14 @@ OPT=-O2  -funroll-all-loops
 CXXFLAGS=$(OPT) -Wall -W -I..  $(DEBUG)
 
 TARGETS=diploid diploid_ind diploid_fixed_sh diploid_twopop_mig diploid_binaryIO RHH bneck_selection migsel_ind diploid_binaryIO_ind diploid_fixed_sh_ind gsl_rng_test gsl_rng_test2 TFL2013 pfix
-all: diploid.o diploid_ind.o diploid_binaryIO.o diploid_binaryIO_ind.o diploid_fixed_sh.o diploid_twopop_mig.o RHH.o diploid_fixed_sh_ind.o bneck_selection.o migsel_ind.o gsl_rng_test.o gsl_rng_test2.o TFL2013.o pfix.o
+all: diploid.o diploid_ind.o diploid_binaryIO.o diploid_gzbinaryIO.o diploid_binaryIO_ind.o diploid_gzbinaryIO_ind.o diploid_fixed_sh.o diploid_twopop_mig.o RHH.o diploid_fixed_sh_ind.o bneck_selection.o migsel_ind.o gsl_rng_test.o gsl_rng_test2.o TFL2013.o pfix.o
 	$(CXX) $(CXXFLAGS) -o diploid diploid.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o diploid_ind diploid_ind.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o RHH RHH.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o diploid_binaryIO diploid_binaryIO.o -lsequence -lz -lgsl -lboost_system -lgslcblas $(LDFLAGS)
+	$(CXX) $(CXXFLAGS) -o diploid_gzbinaryIO diploid_gzbinaryIO.o -lsequence -lz -lgsl -lboost_system -lgslcblas $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o diploid_binaryIO_ind diploid_binaryIO_ind.o -lsequence -lz -lgsl -lboost_system -lgslcblas $(LDFLAGS)
+	$(CXX) $(CXXFLAGS) -o diploid_gzbinaryIO_ind diploid_gzbinaryIO_ind.o -lsequence -lz -lgsl -lboost_system -lgslcblas $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o diploid_fixed_sh diploid_fixed_sh.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o diploid_fixed_sh_ind diploid_fixed_sh_ind.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
 	$(CXX) $(CXXFLAGS) -o diploid_twopop_mig diploid_twopop_mig.o -lsequence -lz -lgsl -lgslcblas -lboost_system $(LDFLAGS)
