--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -39,6 +39,12 @@ bin_PROGRAMS = diploid$(EXEEXT) diploid_ind$(EXEEXT) \
 	migsel_ind$(EXEEXT) bneck_selection_ind$(EXEEXT) \
 	diploid_ind_2locus$(EXEEXT) diploid_twopop_mig$(EXEEXT) \
 	pfix$(EXEEXT) RHH$(EXEEXT) TFL2013$(EXEEXT)
+@DEBUG_FALSE@am__append_1 = -DNDEBUG
+#Boost is missing, so we gotta use the standard headers
+@USE_STANDARD_TRUE@am__append_2 = -DUSE_STANDARD_CONTAINERS \
+@USE_STANDARD_TRUE@	-DUSE_STANDARD_CONTAINERS
+#On some systems (or at least recent boost versions, the boost_system is needed to use the boost containers
+@BLIST_PRESENT_TRUE@@BMAP_PRESENT_TRUE@@BVEC_PRESENT_TRUE@@USE_STANDARD_FALSE@am__append_3 = -lboost_system
 subdir = examples
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -55,62 +61,63 @@ PROGRAMS = $(bin_PROGRAMS)
 am_RHH_OBJECTS = RHH.$(OBJEXT)
 RHH_OBJECTS = $(am_RHH_OBJECTS)
 RHH_LDADD = $(LDADD)
-RHH_DEPENDENCIES =
+am__DEPENDENCIES_1 =
+RHH_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_TFL2013_OBJECTS = TFL2013.$(OBJEXT)
 TFL2013_OBJECTS = $(am_TFL2013_OBJECTS)
 TFL2013_DEPENDENCIES =
 am_bneck_selection_ind_OBJECTS = bneck_selection_ind.$(OBJEXT)
 bneck_selection_ind_OBJECTS = $(am_bneck_selection_ind_OBJECTS)
 bneck_selection_ind_LDADD = $(LDADD)
-bneck_selection_ind_DEPENDENCIES =
+bneck_selection_ind_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_diploid_OBJECTS = diploid.$(OBJEXT)
 diploid_OBJECTS = $(am_diploid_OBJECTS)
 diploid_LDADD = $(LDADD)
-diploid_DEPENDENCIES =
+diploid_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_diploid_binaryIO_OBJECTS = diploid_binaryIO.$(OBJEXT)
 diploid_binaryIO_OBJECTS = $(am_diploid_binaryIO_OBJECTS)
 diploid_binaryIO_LDADD = $(LDADD)
-diploid_binaryIO_DEPENDENCIES =
+diploid_binaryIO_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_diploid_binaryIO_ind_OBJECTS = diploid_binaryIO_ind.$(OBJEXT)
 diploid_binaryIO_ind_OBJECTS = $(am_diploid_binaryIO_ind_OBJECTS)
 diploid_binaryIO_ind_LDADD = $(LDADD)
-diploid_binaryIO_ind_DEPENDENCIES =
+diploid_binaryIO_ind_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_diploid_fixed_sh_OBJECTS = diploid_fixed_sh.$(OBJEXT)
 diploid_fixed_sh_OBJECTS = $(am_diploid_fixed_sh_OBJECTS)
 diploid_fixed_sh_LDADD = $(LDADD)
-diploid_fixed_sh_DEPENDENCIES =
+diploid_fixed_sh_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_diploid_fixed_sh_ind_OBJECTS = diploid_fixed_sh_ind.$(OBJEXT)
 diploid_fixed_sh_ind_OBJECTS = $(am_diploid_fixed_sh_ind_OBJECTS)
 diploid_fixed_sh_ind_LDADD = $(LDADD)
-diploid_fixed_sh_ind_DEPENDENCIES =
+diploid_fixed_sh_ind_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_diploid_gzbinaryIO_OBJECTS = diploid_gzbinaryIO.$(OBJEXT)
 diploid_gzbinaryIO_OBJECTS = $(am_diploid_gzbinaryIO_OBJECTS)
 diploid_gzbinaryIO_LDADD = $(LDADD)
-diploid_gzbinaryIO_DEPENDENCIES =
+diploid_gzbinaryIO_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_diploid_gzbinaryIO_ind_OBJECTS = diploid_binaryIO_ind.$(OBJEXT)
 diploid_gzbinaryIO_ind_OBJECTS = $(am_diploid_gzbinaryIO_ind_OBJECTS)
 diploid_gzbinaryIO_ind_LDADD = $(LDADD)
-diploid_gzbinaryIO_ind_DEPENDENCIES =
+diploid_gzbinaryIO_ind_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_diploid_ind_OBJECTS = diploid_ind.$(OBJEXT)
 diploid_ind_OBJECTS = $(am_diploid_ind_OBJECTS)
 diploid_ind_LDADD = $(LDADD)
-diploid_ind_DEPENDENCIES =
+diploid_ind_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_diploid_ind_2locus_OBJECTS = diploid_ind_2locus.$(OBJEXT)
 diploid_ind_2locus_OBJECTS = $(am_diploid_ind_2locus_OBJECTS)
 diploid_ind_2locus_LDADD = $(LDADD)
-diploid_ind_2locus_DEPENDENCIES =
+diploid_ind_2locus_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_diploid_twopop_mig_OBJECTS = diploid_twopop_mig.$(OBJEXT)
 diploid_twopop_mig_OBJECTS = $(am_diploid_twopop_mig_OBJECTS)
 diploid_twopop_mig_LDADD = $(LDADD)
-diploid_twopop_mig_DEPENDENCIES =
+diploid_twopop_mig_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_migsel_ind_OBJECTS = migsel_ind.$(OBJEXT)
 migsel_ind_OBJECTS = $(am_migsel_ind_OBJECTS)
 migsel_ind_LDADD = $(LDADD)
-migsel_ind_DEPENDENCIES =
+migsel_ind_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am_pfix_OBJECTS = pfix.$(OBJEXT)
 pfix_OBJECTS = $(am_pfix_OBJECTS)
 pfix_LDADD = $(LDADD)
-pfix_DEPENDENCIES =
+pfix_DEPENDENCIES = $(am__DEPENDENCIES_1)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -250,9 +257,8 @@ diploid_twopop_mig_SOURCES = diploid_twopop_mig.cc common_gamete.hpp
 pfix_SOURCES = pfix.cc
 RHH_SOURCES = RHH.cc
 TFL2013_SOURCES = TFL2013.cc
-AM_CPPFLAGS = -Wall -W
-#needed on many systems using boost::container
-LDADD = -lboost_system
+AM_CPPFLAGS = -Wall -W $(am__append_1) $(am__append_2)
+LDADD = $(am__append_3)
 TFL2013_LDADD = -lboost_iostreams
 all: all-am
 
