added -I. to AM_CPPFLAGS

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -30,7 +30,7 @@ pfix_SOURCES=pfix.cc
 RHH_SOURCES=RHH.cc
 TFL2013_SOURCES=TFL2013.cc
 
-AM_CPPFLAGS=-Wall -W
+AM_CPPFLAGS=-Wall -W -I.
 
 if DEBUG
 else !DEBUG
