streamlined and faster crossover code

--- a/Makefile.in
+++ b/Makefile.in
@@ -215,7 +215,7 @@ ACLOCAL_AMFLAGS = -I m4
 #  following and add `chk' to the EXTRA_DIST list
 #TESTS=chk
 fwdpp_SOURCES = 
-EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/Makefile LICENSE
+EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp examples/Makefile LICENSE
 all: config-h.in
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
