--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -192,7 +192,8 @@ pkginclude_HEADERS = debug.hpp \
 	sampling_functions.hpp \
 	sampling_functions.tcc \
 	util.hpp \
-	recombination_methods_ind.hpp
+	recombination_methods_ind.hpp \
+	algorithm.hpp
 
 all: all-am
 
