--- a/Makefile.am
+++ b/Makefile.am
@@ -6,4 +6,4 @@ ACLOCAL_AMFLAGS = -I m4
 #  following and add `chk' to the EXTRA_DIST list
 #TESTS=chk
 fwdpp_SOURCES=
-EXTRA_DIST=doc/fwdpp.doxygen examples/*.cc examples/Makefile LICENSE
+EXTRA_DIST=doc/fwdpp.doxygen examples/*.cc examples/*.hpp examples/Makefile LICENSE
