--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -22,4 +22,5 @@ pkginclude_HEADERS=debug.hpp \
 	sampling_functions.hpp \
 	sampling_functions.tcc \
 	util.hpp \
-	recombination_methods_ind.hpp
+	recombination_methods_ind.hpp \
+	algorithm.hpp
