moved rec_gamete_updater

--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -193,7 +193,8 @@ pkginclude_HEADERS = debug.hpp \
 	sampling_functions.tcc \
 	util.hpp \
 	recombination_methods_ind.hpp \
-	algorithm.hpp
+	algorithm.hpp \
+	rec_gamete_updater.hpp 
 
 all: all-am
 
