--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -23,4 +23,5 @@ pkginclude_HEADERS=debug.hpp \
 	sampling_functions.tcc \
 	util.hpp \
 	recombination_methods_ind.hpp \
-	algorithm.hpp
+	algorithm.hpp \
+	rec_gamete_updater.hpp 
