--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -172,6 +172,9 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 pkginclude_HEADERS = debug.hpp \
 	diploid_functions.hpp \
+	diploid_gamete_based.hpp \
+	diploid_individual_based.hpp \
+	diploid_individual_based_multilocus.hpp \
 	diploid_functions.tcc \
 	diploid_functions_gamete_based.tcc \
 	diploid_functions_ind_based.tcc \
