--- a/devtools/skeleton/configure.ac
+++ b/devtools/skeleton/configure.ac
@@ -1,7 +1,7 @@
 AC_PREREQ(2.59)
 
 AC_INIT([FWDPPPACKAGE],[0.1.0],[FWDPPPROJECTURL])
-AC_CONFIG_SRCDIR([src/qRHH_single.cc])
+AC_CONFIG_SRCDIR([src/FWDPPPACKAGE.cc])
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS([config-h.in])
 
