--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -209,9 +209,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu fwdpp/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign fwdpp/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu fwdpp/Makefile
+	  $(AUTOMAKE) --foreign fwdpp/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
