Ignored genered files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
 *.o
-*~
+*~stamp-h1
+fwdpp/Makefile
+examples/pfix
+examples/migsel_ind
+examples/diploid_twopop_mig
+examples/diploid_ind
+examples/diploid_gzbinaryIO
+stamp-h1
+examples/diploid_ind_2locus
+examples/diploid_gzbinaryIO
+examples/diploid_fixed_sh
+examples/diploid_fixed_sh_ind
+examples/diploid_fixed_sh_ind_lambda
+examples/diploid_binaryIO
+examples/diploid_binaryIO_ind
+Makefile
+autom4te.cache
+config-h.in
+config.log
+config.status
+devtools/skeleton/Makefile.in
+devtools/skeleton/src/Makefile.in
+examples/.deps
+examples/RHH
+examples/TFL2013
+examples/bneck_selection_ind
+examples/diploid
+examples/diploid_
+examples/diploid_gzbinaryIO
+examples/diploid_gzbinaryIO_ind
