individual- and gamete- based recombination now share a common set of functions, replacing the copy/paste buffoonery of before

--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -274,7 +274,8 @@ pkginclude_HEADERS = debug.hpp \
 	sampling_functions.tcc \
 	util.hpp \
 	recombination_methods_ind.hpp \
-	rec_gamete_updater.hpp 
+	rec_gamete_updater.hpp \
+	recombination_common.hpp
 
 all: all-am
 
