added wrapper for gsl_ran_discrete_t using std::unique_ptr and a custom deleter.  No more need to worry about freeing the thing.

--- a/fwdpp/internal/Makefile.in
+++ b/fwdpp/internal/Makefile.in
@@ -251,7 +251,8 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 pkginclude_HEADERS = mutation_internal.hpp \
 	rec_gamete_updater.hpp \
-	recombination_common.hpp
+	recombination_common.hpp \
+	gsl_discrete.hpp
 
 all: all-am
 
