--- a/fwdpp/internal/Makefile.am
+++ b/fwdpp/internal/Makefile.am
@@ -2,5 +2,6 @@ pkgincludedir=$(prefix)/include/fwdpp/internal
 
 pkginclude_HEADERS=mutation_internal.hpp \
 	rec_gamete_updater.hpp \
-	recombination_common.hpp
+	recombination_common.hpp \
+	gsl_discrete.hpp
 
